# OpenGL_learning

./: CMakeLists.txt
src/: main.cpp
src/lesson02/: main.cpp  triangle.frag  triangle.vert  utils.cpp  utils.h
src/lesson02/res/shaders/: triangle.vert
src/lesson03/: main.cpp
src/lesson03/res/shaders/: triangle.frag
src/lesson05/: main.cpp
src/lesson05/res/shaders/: rect.frag  rect.vert
src/lesson06/: main.cpp
src/lesson06/res/shaders/: rect.frag  rect.vert
src/lesson07/: main.cpp
src/lesson07/res/shaders/: rect.frag
src/lesson08/: main.cpp
src/lesson08/res/shaders/: rect.frag  rect.vert
src/lesson09/: Scene.cpp  Scene.h  main.cpp
src/lesson09/res/shaders/: rect.frag  rect.vert
src/renderer/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Model.cpp  Model.h  Program.cpp  Program.h  Property.cpp  Property.h  Scene.cpp  Scene.h  SceneBase.cpp  SceneBase.h  Texture.cpp  Texture.h  Transformation.cpp  Transformation.h
src/utils/: texture.cpp  texture.h  utils.cpp
